# games101-homework

./: README.md
2/: CMakeLists.txt  main.cpp  rasterizer.cpp
Homework1/Assignment1/: main.cpp  rasterizer.cpp  rasterizer.hpp
Homework5/: CMakeLists.txt  Renderer.cpp  Triangle.hpp  tet.cpp
Homework6/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Renderer.cpp  Triangle.hpp
Homework7/: BVH.cpp  Bounds3.hpp  Intersection.hpp  Renderer.cpp  Scene.cpp  Triangle.hpp  global.hpp
homework3/: main.cpp  rasterizer.cpp
